--- a/ncsu-involvement/src/App/App.css
+++ b/ncsu-involvement/src/App/App.css
@@ -1,3 +1,38 @@
 header {
-    background-color: #f0f0f0;
+    margin: 0;
+    padding: 10px;
+    background-color: #eee;
+    display: flex;
+    align-items: center;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 20px;
+}
+
+header h1 {
+    font-size: 50px;
+    margin: 0;
+    margin-right: 20px;
+}
+
+header > * {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+header a {
+    color: #c00;
+}
+
+header a:hover {
+    opacity: 0.7;
+}
+
+#last-link {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+
+#last-link i {
+    margin-left: 15px;
 }
