--- a/ncsu-involvement/src/index.css
+++ b/ncsu-involvement/src/index.css
@@ -7,6 +7,31 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+a {
+  text-decoration: none;
+}
+
+main {
+  padding: 20px;
+}
+
+input[type=text], input[type=password] {
+  font-size: large;
+}
+
+button, input[type=submit] {
+  background-color: #c00;
+  border-radius: 6px;
+  padding: 5px 10px;
+  border: none;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  color: white;
+}
+button:hover, input[type=submit]:hover {
+  background-color: rgb(231, 7, 7);
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
